PC-10 Styling firebase filter suggestion mobile and fixing styling and project design issues

--- a/src/components/Filters/FirebaseFilter/FirebaseFilterSuggestion/FirebaseFilterSuggestion.module.scss
+++ b/src/components/Filters/FirebaseFilter/FirebaseFilterSuggestion/FirebaseFilterSuggestion.module.scss
@@ -45,7 +45,6 @@
       column-gap: 5rem;
     
       >.SuggestionItem {
-        height: fit-content;
         color: $dark-grey;
         font-size: 1rem;
         margin-bottom: 1.2rem;
@@ -53,6 +52,37 @@
 
         &:hover {
           color: $blue;
+        }
+      }
+    }
+  }
+
+  @include extra-small-devices {
+    width: 100%;
+    padding: 0;
+
+    >.SearchbarWrapper > .SuggestionSearchbar {
+      border-radius: 6px;
+      height: 4rem;
+      margin: 0 auto;
+      width: 95%;
+    }
+
+    >.SuggestionContainer {
+      height: 55vh;
+
+      >.SuggestionList {
+        display: flex;
+        flex-flow: column;
+        overflow-y: auto;
+        max-height: 100%;
+        text-align: left;
+        padding-left: 2rem;
+        box-sizing: border-box;
+
+        >.SuggestionItem {
+          font-size: 1.2rem;
+          margin-bottom: 1.3rem;
         }
       }
     }
