--- a/src/components/UI/SideDrawer/SideDrawer.module.scss
+++ b/src/components/UI/SideDrawer/SideDrawer.module.scss
@@ -15,6 +15,7 @@
     flex-flow: column;
     align-items: flex-start;
     padding: 1.5rem 2rem 3rem;
+    color: #000;
 
     >.ArrowIcon {
       cursor: pointer;
